fix: body overflow

--- a/frontend/src/assets/global.scss
+++ b/frontend/src/assets/global.scss
@@ -5,6 +5,7 @@ html {
   min-height: 100%;
   margin: 0;
   padding: 0;
+  overflow: hidden;
   background-color: var(--background-color);
   font-family:
     -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
@@ -87,11 +88,6 @@ html {
   }
 }
 
-body.app-layout-sidebar-only {
-  overflow-y: hidden;
-  overflow-x: hidden;
-}
-
 .main-content.app-layout-sidebar-only {
   margin-left: auto;
   margin-right: auto;
@@ -109,10 +105,6 @@ body.app-layout-sidebar-only {
 }
 
 @media (max-width: 992px) {
-  body {
-    overflow-y: auto;
-  }
-
   .global-app-container {
     margin: 0 12px 60px;
   }
